<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:id="@+id/img_thumbnail"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/thumbnail"
            android:src="@mipmap/ic_launcher" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/restaurant_name"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold"
                app:fontFamily="@font/roboto_black" />

            <androidx.cardview.widget.CardView
                android:id="@+id/tv_rating_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                app:cardCornerRadius="5dp">

                <TextView
                    android:id="@+id/tv_rating"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@color/colorGreen"
                    android:gravity="center"
                    android:text="@string/_3_9"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    app:fontFamily="@font/roboto" />
            </androidx.cardview.widget.CardView>
        </RelativeLayout>


        <TextView
            android:id="@+id/tv_cuisines"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_black"
            android:maxLines="1"
            android:text="@string/cafe_american_beverages" />

        <TextView
            android:id="@+id/tv_per_person_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:text="@string/rs_200_per_person" />

    </LinearLayout>

</LinearLayout>